implemented array of objects and bonus 1

--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,74 @@
 body{
-    font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat", sans-serif;
+	background-color: azure;
+}
+
+.my-filter{
+	filter: brightness(.65);
+}
+
+.carousel-thumbnails-item{
+	display: inline-block;
+	border-radius:20px;
+	box-shadow:1px 1px 10px 10px rgb(82, 82, 82);
+	min-width:150px;
+	height:80px;
+	margin:0 5px;
+}
+
+figure.carousel-current-item{
+	border-radius:10px;
+	display: none;
+	overflow: hidden;
+	box-shadow:1px 1px 14px 10px rgb(73, 73, 73);
+}
+
+figure.carousel-current-item.active{
+	display:inline-block;
 }
 
 div.my-carousel-container{
-    min-height: 700px;
-    min-width:800px ;
-    background-color: aquamarine;
+	min-height: 700px;
+	width: 900px;
+	margin:0 auto;
 }
 
 div.my-carousel-images{
-    background-color: cadetblue;
-    min-height: 540px;
+	min-height: 540px;
 }
 
-div.my-thumbnails{
-    background-color: violet;
-    min-height: 160px;
-}
 
 div.my-previous,
 div.my-next{
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, .5);
-    z-index: 1;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	padding: 5px;
+	background-color: rgba(255, 255, 255, .5);
+	z-index: 1;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
 }
 
 div.my-previous{
-    left: 1rem;
+	left: 1rem;
 }
 
 div.my-next{
-    right: 1rem;
+	right: 1rem;
 }
 
 div.my-previous > span::after{
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f7fb";
-    line-height: 30px;
+	font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+	content: "\f7fb";
+	line-height: 30px;
 }
 
 div.my-next > span::after{
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f520";
-    line-height: 30px;
+	font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+	content: "\f520";
+	line-height: 30px;
 }
