--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,58 @@
 body{
 	font-family: "Montserrat", sans-serif;
 	background-color: #81D8D0;
-	overflow: hidden;
 }
 
 .my-filter{
-	filter: brightness(.65);
+	filter: brightness(.5);
 }
 
-.carousel-thumbnails-item{
-	display: inline-block;
-	border-radius:20px;
-	box-shadow:1px 5px 8px 6px rgba(0, 0, 0, 0.37);
-	min-width:147px;
-	height:80px;
-	margin:0 5px;
+div.my-carousel-container{
+	min-height: 700px;
+	width: 900px;
+	margin: 0 auto;
+}
+
+div.my-carousel-images{
+	min-height: 540px;
 }
 
 figure.carousel-current-item{
-	border-radius:10px;
+	border-radius: 10px;
 	display: none;
 	overflow: hidden;
-	box-shadow:1px 5px 8px 6px rgba(0, 0, 0, 0.37)
+	box-shadow: 1px 5px 8px 6px rgba(0, 0, 0, 0.37)
+}
+
+figure.carousel-current-item,
+figure.carousel-current-item img{
+	height: 100%;
+	width: 100%;
 }
 
 figure.carousel-current-item.active{
 	display:inline-block;
 }
 
-div.my-carousel-container{
-	min-height: 700px;
-	width: 900px;
-	margin:0 auto;
+figure.carousel-current-item,
+div.my-thumbnails .carousel-thumbnails-item{
+	transition: all 1s ease-in-out;
 }
 
-div.my-carousel-images{
-	min-height: 540px;
+div.my-thumbnails{
+	width:800px;
+	display:flex;
+	overflow-x: scroll;
+}
+
+div.my-thumbnails .carousel-thumbnails-item{
+	height:80px;
+	flex-shrink:0;
+	flex-grow:2;
+	flex-basis:140px;
+	margin:1rem .5rem;
+	border-radius:20px;
+	box-shadow:0px 5px 7px 5px rgba(0, 0, 0, 0.37);
 }
 
 
