--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
 body{
 	font-family: "Montserrat", sans-serif;
 	background-color: #81D8D0;
-}
-
-.my-filter{
-	filter: brightness(.5);
+	overflow: hidden;
 }
 
 div.my-carousel-container{
@@ -40,9 +37,7 @@ div.my-thumbnails .carousel-thumbnails-item{
 }
 
 div.my-thumbnails{
-	width:800px;
 	display:flex;
-	overflow-x: scroll;
 }
 
 div.my-thumbnails .carousel-thumbnails-item{
@@ -52,7 +47,12 @@ div.my-thumbnails .carousel-thumbnails-item{
 	flex-basis:140px;
 	margin:1rem .5rem;
 	border-radius:20px;
+	filter: brightness(.5);
 	box-shadow:0px 5px 7px 5px rgba(0, 0, 0, 0.37);
+}
+
+div.my-thumbnails .carousel-thumbnails-item.active{
+	filter: none;
 }
 
 
